--- a/src/main/resources/com/example/carparkmanager/CarPark.fxml
+++ b/src/main/resources/com/example/carparkmanager/CarPark.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane fx:id="root" prefHeight="594.0" prefWidth="758.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carparkmanager.CarParkController">
+<BorderPane fx:id="root" prefHeight="594.0" prefWidth="758.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.carparkmanager.CarParkController">
     <top>
         <VBox spacing="11">
             <Label text="Registered Cars">
@@ -18,7 +12,7 @@
                     <Font size="18" />
                 </font>
             </Label>
-         <Button mnemonicParsing="false" onAction="#handleAddCarButton" text="Register car" />
+         <Button mnemonicParsing="false" onAction="#handleAddCarButton" text="Register car" textAlignment="CENTER" />
             <TableView fx:id="registeredCarsTable" prefHeight="200.0" prefWidth="200.0">
                 <columns>
                     <TableColumn fx:id="licensePlateColumn" prefWidth="109.0" text="License Plate" />
@@ -41,11 +35,12 @@
                 <Label fx:id="capacityLabel" />
             </HBox>
             <HBox alignment="CENTER" spacing="10">
+            <ToggleButton mnemonicParsing="false" text="ToggleButton" />
                 <ComboBox fx:id="parkingComboBox" prefWidth="150.0" promptText="Select a car" />
                 <Button fx:id="parkCarButton" onAction="#parkCar" text="Park Car" />
             <Button mnemonicParsing="false" onAction="#generateReport" text="Report" />
-                <Button text="Save" onAction="#handleSaveButton" />
-                <Button text="Load" onAction="#handleLoadButton" />
+                <Button onAction="#handleSaveButton" text="Save" />
+                <Button onAction="#handleLoadButton" text="Load" />
             </HBox>
             <TableView fx:id="parkedCarsTable" prefHeight="182.0" prefWidth="684.0">
                 <columns>
